# Microservices-Pet-AUTH

./: .gitignore  .local.Dockerfile  alembic.ini  docker-compose.local.yml  local.Dockerfile  local_entrypoint.sh
alembic/: env.py
auth-api/: pyproject.toml
clickHouseConsumer/: Dockerfile  go.mod  go.sum  main.go
clickhouse/: init.sql
src/: config.py  main.py  models_dependencies.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth.py
src/dependency/cache/: redis_cache.py
src/dependency/producer/: kafka_producer.py
src/dependency/repository/: refresh_token_repository.py  user_repository.py
src/dependency/service/: jwt_refresh_token_create_service.py  jwt_service.py  user_auth_service.py  user_create_service.py
src/helper/: database_helper.py
src/model/: base.py  refresh_token.py  user.py
src/repository/: base_repository.py  refresh_token_repository.py  refresh_token_repository_impl.py  repository.py  user_repository.py  user_repository_impl.py
src/schemas/: refresh_token.py  token.py  user.py
src/service/: __init__.py  create_service_user.py  jwt_refresh_token_create_service.py  jwt_service.py  user_auth_service.py  user_create_service.py
src/util/: error_message_and_code.py
src/util/cache/: cache.py  redis_cache.py
src/util/decoder/: decoder.py  jwt_decoder.py
src/util/encoder/: encoder.py  jwt_encoder.py
src/util/enum/: available_type.py
src/util/errors/: app_error.py  error_catalogs.py  error_message_and_code.py  error_types.py
src/util/exception/: app_exception.py  base_app_exception.py  password_invalid_exception.py  (+2 more)
(+14 files in other folders)
